# DDBcoding

./: .gitignore  README.md  SKILL.md  ingest.py  pyproject.toml  search.py  server.py
my_markdown_files/funcs/: appendix.md  funcs_by_topics.md
my_markdown_files/funcs/a/: abs.md  acos.md  acosh.md  adaBoostClassifier.md  addAccessControl.md  addColumn.md  addGroupMember.md  addMarketHoliday.md  addValuePartitions.md  addVolumes.md  addgpfunction.md  addipblacklist.md  addipwhitelist.md  addreactivemetrics.md  align.md  all.md  and.md  anova.md  any.md  appendMsg.md  arima.md  asFreq.md  asinh.md  asof.md  at.md  atanh.md  attributevalues.md  autocorr.md
my_markdown_files/funcs/b/: backupDB.md  backupsettings.md  bar.md  base64Decode.md  beta.md  between.md  bfill_.md  binaryExpr.md  bitNot.md  bitOr.md  blob.md  bondCashflow.md  bondDirtyPrice.md  bondconvexity.md  bondyield.md  bool.md  boxcox.md  brentq.md  bucket.md  bucketCount.md  businessYearBegin.md
my_markdown_files/funcs/c/: cacheDSNow.md  cacheDS_.md  cancelConsoleJob.md  cancelJob.md  cancelRebalanceTask.md  cancelpkeycompactiontask.md  cast.md  cdfExp.md  cdfKolmogorov.md  cdfLogistic.md  cdfPoisson.md  cdfWeibull.md  cdfZipf.md  cds.md  cell.md  changePwd.md  char.md  charAt.md  checkBackup.md  cholesky.md  cj.md  cleanOutdateLogFiles.md  clearAllCache.md  clearDSCacheNow.md  (+67 more)
references/tutorials/: 01_moving_averages.md
scripts/: ingest.py  search.py  server.py
scripts/ddb_runner/: execute.py
scripts/dos_samples/: moving_average.dos
scripts/rag/: cli_search.py  ingest.py  mcp_server.py
(+1348 files in other folders)
